<resources>
    <string name="app_name">Coursework Application</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_SignIn">SignInActivity</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="login">Login</string>
    <string name="loginUnderline"><u>Login</u></string>
    <string name="register_string1">Already have an account?</string>
    <string name="register_string2"><u>Register</u></string>
    <string name="register_string3">Password</string>
    <string name="register_string4">Email</string>
    <string name="homeString">Home</string>
    <string name="resultsPageString">Results Page</string>
    <string name="restaurantPageString">Restaurant Page</string>
    <string name="logout">Logout</string>
    <string name="profile">Profile</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_string1">Don\'t have an account?</string>
    <string name="guestLogin">Click <u>here</u> to continue with a temporary guest account.</string>
    <string name="register_string5">Note: Some features will be unavailable while using a guest account.</string>
    <string name="homeSearch">Search</string>
    <string name="homeRestaurant_name">Restaurant name</string>
    <string name="write_review">Review</string>
    <string name="restaurantPageName">Name</string>
    <string name="add_a_public_review">Add a public review…</string>
    <string name="post">post</string>
    <string name="tag_an_image">Tag an image</string>
    <string name="tag_a_location">Tag location</string>
    <string name="add_review">Add review</string>
    <string name="location_tag_input">Enter location you\'d like to tag…</string>
    <string name="review_activity_string">Leave a review…</string>
    <string name="title_your_review">Title your review…</string>
    <string name="users_tagged_image">Users\' tagged image</string>
    <string name="edit"><u>Edit</u></string>
    <string name="edit_review">Edit Review</string>
    <string name="main_guest_intro">Register an account to write your own reviews!</string>
    <string name="a_like_button">A like button</string>
    <string name="main_personalised_recommendation">Personalised Recommendation</string>
    <string name="main_recommendation_text">Leave reviews to receive custom recommendations</string>
    <string name="your_reviews">Your Reviews</string>
    <string name="restaurant_image">Restaurant image</string>
    <string name="style">Style</string>
    <string name="review_location_text">Location will be displayed here</string>
    <string name="register_button_string">Register</string>
    <string name="description">Description</string>
    <string name="location">Location</string>
</resources>