<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/nameTextView"
        style="@style/TextAppearance.MaterialComponents.Headline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/toolbar5"
        android:text="@string/restaurantPageName" />

    <TextView
        android:id="@+id/styleTextView"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/nameTextView"
        android:text="@string/style" />

    <TextView
        android:id="@+id/descTextView"
        style="@style/TextAppearance.MaterialComponents.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/styleTextView"
        android:text="@string/description" />

    <TextView
        android:id="@+id/locationTextView"
        style="@style/TextAppearance.MaterialComponents.Subtitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/descTextView"
        android:text="@string/location" />

    <View
        android:id="@+id/rowDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        android:layout_below="@id/locationTextView"/>


    <Button
        android:id="@+id/reviewButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_review"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rowDivider"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/restaurantReviewsView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:scrollbars="vertical"
        android:layout_below="@id/reviewButton"/>

</RelativeLayout>