<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:minHeight="?attr/actionBarSize"
        app:menu="@menu/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="?attr/colorPrimary">
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/toolbar2"
        android:hint="@string/register_string4"
        android:textColorHint="#494949"
        app:boxStrokeColor="@color/green_500"
        app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textEmailAddress"
            tools:text="abc@gmail.com"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordTextField2"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/emailTextField2"
        android:hint="@string/register_string3"
        android:textColorHint="#494949"
        app:boxStrokeColor="@color/green_500"
        app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:inputType="textPassword"
            tools:text="password123"
            android:padding="10dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/registerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_button_string"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/passwordTextField2"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_below="@id/registerButton"
        android:text="@string/register_string1" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/loginText"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:layout_below="@id/registerButton"
        android:layout_toRightOf="@id/textView"
        android:text="@string/loginUnderline"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerTextView1"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="4dp"
        android:layout_below="@id/textView"
        android:text="@string/guestLogin" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/registerTextView2"
        style="@style/TextAppearance.MaterialComponents.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:layout_below="@id/registerTextView1"
        android:text="@string/register_string5" />


</RelativeLayout>