<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:minHeight="?attr/actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="?attr/colorPrimary">
        </androidx.appcompat.widget.Toolbar>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical">


            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/outlinedTextField"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="5dp"
                    android:hint="@string/homeRestaurant_name"
                    android:textColorHint="#494949"
                    app:boxStrokeColor="@color/green_500"
                    app:endIconDrawable="@android:drawable/ic_menu_close_clear_cancel"
                    app:startIconDrawable="@android:drawable/ic_menu_search">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/searchButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/homeSearch"
                    android:layout_marginTop="10dp"/>

            </TableRow>

            <TextView
                android:id="@+id/userTextView"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                tools:text="Welcome Guest User !" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView3"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/main_personalised_recommendation" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/styleView"
                style="@style/TextAppearance.MaterialComponents.Subtitle2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"/>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@color/green_50">

                <ImageView
                    android:id="@+id/imageView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_margin="10dp"
                    android:contentDescription="@string/restaurant_image" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/info_text"
                    style="@style/TextAppearance.MaterialComponents.Body2"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:text="@string/main_recommendation_text" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/location_text"
                    style="@style/TextAppearance.MaterialComponents.Subtitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="bottom"/>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/textView"
                style="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:text="@string/your_reviews" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:divider="@color/green_500"
                android:dividerHeight="1dp"
                android:listSelector="@color/green_200" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>